--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -9,15 +9,15 @@
     <ScrollView
         android:layout_width="368dp"
         android:layout_height="551dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
@@ -46,15 +46,18 @@
 
                 <TextView
                     android:id="@+id/textView4"
-                    android:layout_width="172dp"
+                    android:layout_width="170dp"
                     android:layout_height="42dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="9dp"
+                    android:layout_marginTop="10dp"
                     android:text="Obstaclespeed"
                     android:textSize="24sp"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView2"
+                    android:layout_marginRight="8dp"
+                    app:layout_constraintRight_toRightOf="@+id/textView2"
+                    app:layout_constraintHorizontal_bias="0.0" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -80,13 +83,16 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="21dp"
                     android:text="Player"
                     android:textSize="30sp"
                     app:layout_constraintHorizontal_bias="0.501"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                    android:layout_marginTop="136dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView5"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView10"
+                    app:layout_constraintVertical_bias="0.024" />
 
                 <EditText
                     android:id="@+id/editText4"
@@ -105,22 +111,19 @@
 
                 <TextView
                     android:id="@+id/textView7"
-                    android:layout_width="134dp"
+                    android:layout_width="170dp"
                     android:layout_height="38dp"
-                    android:layout_marginBottom="182dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginLeft="31dp"
-                    android:layout_marginRight="8dp"
                     android:layout_marginStart="31dp"
-                    android:layout_marginTop="8dp"
                     android:text="Playercolor"
                     android:textSize="24sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    android:layout_marginLeft="31dp"
                     app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginTop="91dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView4"
+                    android:layout_marginRight="8dp"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintHorizontal_bias="0.0" />
 
                 <TextView
                     android:id="@+id/textView10"
@@ -130,7 +133,7 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="62dp"
+                    android:layout_marginTop="21dp"
                     android:text="Game"
                     android:textSize="30sp"
                     app:layout_constraintHorizontal_bias="0.501"
@@ -155,17 +158,18 @@
 
                 <TextView
                     android:id="@+id/textView8"
-                    android:layout_width="138dp"
+                    android:layout_width="170dp"
                     android:layout_height="50dp"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginLeft="28dp"
+                    android:layout_marginRight="8dp"
                     android:layout_marginStart="28dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="12dp"
                     android:text="Playersize"
                     android:textSize="24sp"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView7"
-                    tools:layout_editor_absoluteY="343dp" />
+                    app:layout_constraintRight_toLeftOf="@+id/editText3"
+                    app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
                 <EditText
                     android:id="@+id/editText5"
@@ -177,10 +181,11 @@
                     android:layout_marginStart="8dp"
                     android:ems="10"
                     android:inputType="number"
-                    app:layout_constraintHorizontal_bias="0.428"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintLeft_toRightOf="@+id/textView4"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText" />
+                    app:layout_constraintTop_toBottomOf="@+id/editText"
+                    android:layout_marginTop="11dp" />
 
                 <EditText
                     android:id="@+id/editText2"
@@ -192,34 +197,24 @@
                     android:layout_marginStart="8dp"
                     android:ems="10"
                     android:inputType="number"
-                    app:layout_constraintHorizontal_bias="0.428"
-                    app:layout_constraintLeft_toRightOf="@+id/textView4"
+                    app:layout_constraintLeft_toRightOf="@+id/textView7"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText" />
+                    app:layout_constraintTop_toBottomOf="@+id/editText"
+                    android:layout_marginTop="137dp"
+                    app:layout_constraintHorizontal_bias="1.0" />
 
                 <EditText
                     android:id="@+id/editText3"
                     android:layout_width="166dp"
                     android:layout_height="44dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginRight="-9dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="121dp"
+                    android:layout_marginTop="30dp"
                     android:ems="10"
                     android:inputType="number"
-                    app:layout_constraintHorizontal_bias="0.6"
-                    app:layout_constraintLeft_toRightOf="@+id/textView8"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/editText2" />
-
-                <TextView
-                    android:id="@+id/textView65"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView"
-                    tools:layout_editor_absoluteX="143dp"
-                    tools:layout_editor_absoluteY="655dp" />
 
                 <EditText
                     android:id="@+id/editText"
@@ -232,14 +227,13 @@
                     android:layout_marginTop="15dp"
                     android:ems="10"
                     android:inputType="number"
-                    app:layout_constraintHorizontal_bias="0.428"
                     app:layout_constraintLeft_toRightOf="@+id/textView2"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
                 <TextView
                     android:id="@+id/textView2"
-                    android:layout_width="167dp"
+                    android:layout_width="170dp"
                     android:layout_height="45dp"
                     android:layout_marginLeft="21dp"
                     android:layout_marginStart="21dp"
@@ -251,7 +245,7 @@
 
                 <TextView
                     android:id="@+id/textView12"
-                    android:layout_width="144dp"
+                    android:layout_width="170dp"
                     android:layout_height="35dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
@@ -269,5 +263,27 @@
             </android.support.constraint.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        app:layout_constraintGuide_begin="8dp"
+        android:orientation="horizontal" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline2"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="364dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="-258dp"
+        tools:layout_editor_absoluteY="539dp" />
 
 </android.support.constraint.ConstraintLayout>
